--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,20 @@
 /*  your css code here. If applicable */
+.imageContainer{
+	width:1100px;
+}
+table{
+  width:1100px;	
+}
+table,td{
+	border:1.5px solid;
+	border-collapse:collapse;
+}
+td:nth-child(1) {
+     width: 200px;
+}
+td:nth-child(2) {
+     width: 600px;
+}
+td:nth-child(3){
+	 width:200px;		
+}
